<resources>
    <string name="app_name">SignProject</string>

    <string name="drawer_open">Ouvrir le menu</string>
    <string name="drawer_close">Fermer le menu</string>

    <string name="champ_pseudo">Votre pseudo</string>
    <string name="champ_mdp">Votre mot de passe</string>
    <string name="btn_valider">Valider</string>
    <string name="btn_seConnecter">Se connecter</string>
    <string name="btn_Annuler">Annuler</string>
    <string name="champ_confirmer_mdp">Confirmer votre mot de passe</string>
    <string name="btn_inscription">S\'inscrire</string>
    <string name="erreur_pseudo">Doit être supérieur à 2 lettres, ne peut contenir que des lettres, des chiffres et les caractères _ et -</string>
    <string name="erreur_mdp">Doit être supérieur à 7 lettres, contenir au moins une majuscule, une minuscule, un chiffre</string>


    <string name="menu_titre_signalement">SIGNALEMENTS</string>
    <string name="menu_item_listSignalementsProches">Les plus proches</string>
    <string name="menu_item_listSignalementsControleurs">Contrôleurs</string>
    <string name="menu_item_listSignalementsHoraires">Horaires</string>
    <string name="menu_item_listSignalementsAccidentsAutres">Accidents/autres</string>
    <string name="menu_titre_groupe">GROUPES</string>
    <string name="menu_item_mesGroupes">Mes groupes</string>
    <string name="menu_item_rejoindreGroupe">Rejoindre un groupe</string>

    <string name="titre_alert_dialog_erreur">Erreur</string>
    <string name="btn_alert_dialog_erreur">Fermer</string>
    <string name="message_alert_dialog_erreur_pas_internet">Pas de connexion à internet</string>
    <string name="erreur_serveur">erreur</string>
    <string name="message_alert_dialog_erreur_egaux_mdp">Les mots de passes doivent être égaux</string>
    <string name="message_alert_dialog_erreur_pseudo_mdp">Pseudo ou mot de passe incorrect</string>
    <string name="message_alert_dialog_inscription_error">Erreur lors de l\'inscription, veuillez réessayer plus tard</string>
    <string name="message_alert_dialog_inscription_denied">Pseudo déjà utilisé</string>
    <string name="message_alert_dialog_nom_deja_utilise">Nom déjà utilisé</string>
    <string name="message_alert_dialog_deconnexion">Êtes-vous sûr de vouloir vous déconnecter</string>
    <string name="message_alert_dialog_erreur_chargement">Les données n\'ont pas pu être chargées. Veuillez réessayer ultérieurement</string>
    <string name="message_alert_dialog_erreur_horaire_signalement">Aucun horaire ajouté</string>
    <string name="message_alert_dialog_erreur_groupe_signalement">Aucun groupe selectionné</string>
    <string name="message_alert_dialog_erreur_utilisateur_signalement">Aucun utilisateur selectionné</string>
    <string name="message_alert_dialog_erreur_utilisateur_introuvable">l\'utilisateur n\'existe pas</string>
    <string name="message_alert_dialog_erreur_ajout_signalement_bd">Problème d\'enregistrement du signalement</string>
    <string name="message_alert_dialog_erreur_arret_signalement">Aucun arret selectionné</string>
    <string name="message_alert_dialog_quitter_groupe">Ce groupe est privé, si vous le quittez vous ne pourrez plus y accéder</string>


    <string name="progress_dialog_titre">Chargement...</string>
    <string name="progress_dialog_message">Initialisation en cours</string>
    <string name="progress_dialog_message_modif">Modification en cours</string>
    <string name="progress_dialog_message_ajout">Ajout en cours</string>
    <string name="progress_dialog_message_connection">Connexion en cours</string>
    <string name="progress_dialog_message_inscription">Inscription en cours</string>
    <string name="progress_dialog_message_deconnection">Deconnexion en cours</string>
    <string name="progress_dialog_message_envoi_signalement">Envoi du signalement en cours</string>
    <string name="popup_progress_dialog_termine">Chargement terminé</string>

    <string name="texte_header_nav">Bienvenue</string>

    <string name="titre_toolbar_ajout_signalement">Nouveau signalement</string>
    <string name="action_toolbar_deconnnexion">Déconnexion</string>
    <string name="action_toolbar_envoyer_signalement">Envoyer</string>

    <string name="type_ajout_signalement">Type</string>
    <string name="titre_spinner">Choisir</string>

    <string name="controleur_spinner">Controleur</string>
    <string name="horaire_spinner">Horaires</string>
    <string name="accident_spinner">Accidents</string>
    <string name="autres_spinner">Autres</string>

    <string name="arret_ajout_signalement">Arret</string>
    <string name="destination_ajout_signalement">Destination</string>
    <string name="titre_textarea_remarque_ajout_signalement">Remarques...</string>

    <string name="description_minus_button">Moins</string>
    <string name="description_plus_button">Plus</string>

    <string name="public_spinner">Public</string>
    <string name="groupe_spinner">Groupe(s)</string>
    <string name="autres_personnes_spinner">Autre(s) personne(s)</string>

    <string name="horaires_ajout_signalement">Horaires</string>

    <string name="prefix_token_ajout_signalement">Destiné à :</string>

    <string name="dialog_ajout_horaire_signalement">minute(s)</string>
    <string name="dialog_btn_positive_ajout_horaire_signalement">OK</string>
    <string name="dialog_titre_ajout_horaire_signalement">Ajout du temps d\'attente et de la ligne correspondante</string>

    <string name="toast_signalement_envoye">Signalement envoyé !</string>

    <string name="adapter_liste_signalement_heure">Il y a</string>
    <string name="dialog_detail_signalement_envoye_le">Envoyé le</string>
    <string name="dialog_detail_signalement_a">à</string>
    <string name="dialog_detail_signalement_par">par</string>

    <string name="dialog_titre_detail_signalement">Détail du signalement</string>
    <string name="title_activity_position_signalement_maps">Position du signalement</string>

    <string name="titre_position_courante">Vous êtes ici</string>
    <string name="snippet_position_courante_1">Vous êtes à</string>
    <string name="snippet_position_courante_2">mètre(s) du signalement</string>

    <string name="titre_notification_signalement">Signalement proche !</string>

    <string name="titre_notification_groupe_demande">demande à rejoinde le groupe</string>
    <string name="text_notification_groupe_demande">Groupe</string>

    <string name="titre_notification_groupe_accept">Vous avez été accepté dans le groupe</string>
    <string name="text_notification_groupe_accept">Groupe</string>

    <string name="titre_notification_groupe_invite">Vous êtes invité à rejoindre le groupe</string>
    <string name="text_notification_groupe_invite">Groupe</string>

    <string name="titre_notification_groupe_invite_accept">à rejoint le groupe</string>
    <string name="text_notification_groupe_invite_accept">Groupe</string>

    <string name="titre_toolbar_ajout_groupe">Nouveau groupe</string>
    <string name="titre_toolbar_modifier_groupe">Modifier groupe</string>
    <string name="titre_toolbar_groupe">Groupe</string>
    <string name="action_toolbar_ajouter_groupe">Ajouter</string>
    <string name="nom">Nom</string>
    <string name="visibilite">Visibilité</string>
    <string name="description">Description</string>
    <string name="demandes">demandes</string>
    <string name="invitations">invitations</string>
    <string name="type_public">Public</string>
    <string name="type_prive">Privé</string>
    <string name="erreur_nom_groupe">La taille doit être comprise entre 6 et 16 caractères, ne peut contenir que des lettres, des chiffres, les caractères _ et -, et des espaces</string>
    <string name="erreur_description_groupe">La taille doit être comprise entre 20 et 500 caractères</string>
    <string name="message_alert_dialog_erreur_ajout_groupe_bd">Erreur lors de l\'enregistrement du groupe</string>
    <string name="groupe_ajoute">Groupe créé</string>
    <string name="groupe_modifie">Groupe mis à jour</string>
    <string name="groupe_supprime">Groupe supprimé</string>
    <string name="groupe_quitte">Groupe quitté</string>
    <string name="demande_envoyee">Demande envoyée</string>
    <string name="demande_annulee">Demande annulée</string>
    <string name="groupe_rejoint">Groupe rejoint</string>
    <string name="groupe_invitation_refusee">invitation refusée</string>
    <string name="invitation_annulee">invitation annulée</string>
    <string name="membres">Membres</string>
    <string name="membre">Membre</string>
    <string name="admin">Admin</string>
    <string name="en_attente">En attente</string>
    <string name="invite">Invité</string>
    <string name="btn_quitter_groupe">quitter</string>
    <string name="btn_modifier_groupe">modifier</string>
    <string name="btn_supprimer_groupe">supprimer</string>
    <string name="btn_refuser_groupe">refuser</string>
    <string name="btn_rejoindre_groupe">rejoindre le groupe</string>
    <string name="btn_annuler_demande">annuler</string>
    <string name="btn_reset">réinitialiser</string>
    <string name="ajout_en_attente">Demande d\'ajout en attente</string>
    <string name="ajout_invite">Vous avez été invité à rejoindre ce groupe</string>
    <string name="hint_recherche_groupe">Taper un nom de groupe</string>
    <string name="hint_recherche_membre">chercher un utilisateur</string>
    <string name="invitation_membre">inviter</string>
    <string name="ajoute">ajouté</string>
    <string name="erreur_invitation_membre">l\'utilisateur est déjà membre, est en attente d\'acceptation ou n\'existe pas</string>
    <string name="groupe_invitation_ennvoyee">invitation envoyée</string>
    <string name="action_refusee">action refusée</string>
    <string name="refuse">refusé</string>
    <string name="supprime_du_groupe">supprimé du groupe</string>
    <string name="erreur_selection_arret">veuillez selectionner un arrêt</string>
    <string name="erreur_validation_arret">arrêt invalide</string>


</resources>
