<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:layout_margin="@dimen/margin_formulaire">


<LinearLayout
    android:id="@+id/layoutPseudoConnection"
    style="@style/DataIndicatorChampSaisie">
    <ImageView
        android:id="@+id/imgPseudoConnection"
        style="@style/DataIndicatorImage"
        android:src="@drawable/ic_user"/>
    <EditText
        android:id="@+id/editTextPseudoConnection"
        style="@style/DataIndicatorTextChampSaisie"
        android:hint="@string/champ_pseudo" />
</LinearLayout>

<LinearLayout
    android:id="@+id/layoutMdpConnection"
    style="@style/DataIndicatorChampSaisie">
    <ImageView
        android:id="@+id/imgMdpConnection"
        style="@style/DataIndicatorImage"
        android:src="@drawable/ic_key"/>
    <EditText
        android:id="@+id/editTextMdpConnection"
        style="@style/DataIndicatorTextChampSaisie"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:hint="@string/champ_mdp"/>
</LinearLayout>

<LinearLayout
    android:id="@+id/layoutBtnConnection"
    android:layout_width="match_parent"
    android:layout_height="@dimen/hauteur_boutons_formulaire"
    android:orientation="horizontal"
    android:gravity="center">
    <Button
        android:id="@+id/BtnSeConnecterConnection"
        style="@style/Button"
        android:textColorHint="@android:color/white"
        android:background="@drawable/btn_valider"
        android:layout_width="@dimen/largeur_boutons_formulaire"
        android:hint="@string/btn_seConnecter"/>
    <Button
        android:id="@+id/BtnAnnulerConnection"
        android:layout_marginLeft="@dimen/margin_between_field"
        style="@style/Button"
        android:textColorHint="@android:color/white"
        android:background="@drawable/btn_annuler"
        android:layout_width="@dimen/largeur_boutons_formulaire"
        android:hint="@string/btn_Annuler"/>
</LinearLayout>


</LinearLayout>