<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="@dimen/margin_formulaire">


    <LinearLayout
        android:id="@+id/layoutPseudoInscription"
        style="@style/DataIndicatorChampSaisie">
        <ImageView
            android:id="@+id/imgPseudoInscription"
            style="@style/DataIndicatorImage"
            android:src="@drawable/ic_user"/>
        <EditText
            android:id="@+id/editTextPseudoInscription"
            style="@style/DataIndicatorTextChampSaisie"
            android:hint="@string/champ_pseudo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMdpInscription"
        style="@style/DataIndicatorChampSaisie">
        <ImageView
            android:id="@+id/imgMdpInscription"
            style="@style/DataIndicatorImage"
            android:src="@drawable/ic_key"/>
        <EditText
            android:id="@+id/editTextMdpInscription"
            style="@style/DataIndicatorTextChampSaisie"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            android:hint="@string/champ_mdp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutConfirmationMdpInscription"
        style="@style/DataIndicatorChampSaisie">
        <ImageView
            android:id="@+id/imgConfirmationMdpInscription"
            style="@style/DataIndicatorImage"
            android:src="@drawable/ic_key"/>
        <EditText
            android:id="@+id/editTextConfirmationMdpInscription"
            style="@style/DataIndicatorTextChampSaisie"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            android:hint="@string/champ_confirmer_mdp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBtnInscription"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hauteur_boutons_formulaire"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/BtnSeConnecterInscription"
            style="@style/Button"
            android:textColorHint="@android:color/white"
            android:background="@drawable/btn_valider"
            android:layout_width="@dimen/largeur_boutons_formulaire"
            android:hint="@string/btn_inscription"/>
        <Button
            android:id="@+id/BtnAnnulerInscription"
            style="@style/Button"
            android:textColorHint="@android:color/white"
            android:layout_marginLeft="@dimen/margin_between_field"
            android:background="@drawable/btn_annuler"
            android:layout_width="@dimen/largeur_boutons_formulaire"
            android:hint="@string/btn_reset"/>
    </LinearLayout>


</LinearLayout>