<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:id="@+id/layout_groupe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/nom_groupe"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hauteur_champs_saisie"
                android:text="@string/nom"
                android:textSize="@dimen/texte_size_libelle_formulaire"
                android:gravity="center" />

            <TextView
                android:id="@+id/description_groupe"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hauteur_description_groupe"
                android:gravity="left"
                android:layout_below="@+id/description_groupe"
                android:text="@string/description"
                android:scrollbars="vertical"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/membres"
                android:textStyle="bold"
                android:textSize="@dimen/texte_size_libelle_formulaire"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>